alignment of gate-text-1 prevention

--- a/css/style.css
+++ b/css/style.css
@@ -1137,7 +1137,7 @@ body {
 }
 
 #gate-text-1 {
-    left: 37px
+    left: 32px
 }
 
 #gate-text-2,
